[package]
name = "minesweeper"
version = "0.1.0"
authors = ["HagasSaan <artemian000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.6.0"
log = "0.4.6"
rand = "0.7"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
iced = "0.1"
